--- a/marcel_teugels/package.json
+++ b/marcel_teugels/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
+    "@nuxtjs/style-resources": "^1.0.0",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3"
   },
@@ -25,6 +26,9 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.7.0",
-    "prettier": "^2.2.1"
+    "fibers": "^5.0.0",
+    "prettier": "^2.2.1",
+    "sass": "^1.32.8",
+    "sass-loader": "^10.1.1"
   }
 }
