--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@nuxtjs/style-resources": "^1.0.0",
     "buefy": "^0.9.7",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "nuxt-buefy": "^0.4.7"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^6.0.0",
