--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -388,7 +388,7 @@
   "markdown.extension.print.absoluteImgPath": false,
   "hediet.vscode-drawio.customFonts": ["Fira Code"],
   "hediet.vscode-drawio.codeLinkActivated": true,
-  "editor.formatOnType": true,
   "formattingToggle.affects": ["formatOnSave"],
-  "markdown.preview.breaks": true
+  "markdown.preview.breaks": true,
+  "editor.formatOnType": true
 }
