style-main: more styling v3

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/style-resources": "^1.0.0",
     "buefy": "^0.9.7",
     "core-js": "^3.9.1",
+    "modern-normalize": "^1.1.0",
     "nuxt": "^2.15.3",
     "nuxt-buefy": "^0.4.7"
   },
