--- a/package.json
+++ b/package.json
@@ -13,17 +13,16 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
+    "@nuxtjs/markdownit": "^2.0.0",
     "@nuxtjs/style-resources": "^1.0.0",
     "buefy": "^0.9.7",
     "core-js": "^3.9.1",
-    "modern-normalize": "^1.1.0",
     "nuxt": "^2.15.3",
     "nuxt-buefy": "^0.4.7"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
-    "@nuxtjs/stylelint-module": "^4.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.1.0",
@@ -38,10 +37,6 @@
     "nuxt-animejs": "^1.2.1",
     "prettier": "^2.2.1",
     "sass": "^1.32.8",
-    "sass-loader": "^10.1.1",
-    "stylelint": "^13.13.1",
-    "stylelint-config-idiomatic-order": "^8.1.0",
-    "stylelint-config-sass-guidelines": "^8.0.0",
-    "stylelint-config-standard": "^22.0.0"
+    "sass-loader": "^10.1.1"
   }
 }
