--- a/package.json
+++ b/package.json
@@ -12,31 +12,31 @@
     "lintfix": "eslint --ext \".js,.vue\" --fix --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.13.1",
+    "@nuxtjs/axios": "^5.13.4",
     "@nuxtjs/markdownit": "^2.0.0",
     "@nuxtjs/style-resources": "^1.0.0",
-    "buefy": "^0.9.7",
-    "core-js": "^3.9.1",
-    "nuxt": "^2.15.3",
-    "nuxt-buefy": "^0.4.7"
+    "core-js": "^3.12.1",
+    "nuxt": "^2.15.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/eslint-parser": "^7.14.3",
+    "@babel/eslint-plugin": "^7.13.16",
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.24.0",
-    "eslint-config-prettier": "^8.1.0",
+    "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-vue": "^7.9.0",
     "fibers": "^5.0.0",
     "nuxt-animejs": "^1.2.1",
-    "prettier": "^2.2.1",
-    "sass": "^1.32.8",
-    "sass-loader": "^10.1.1"
+    "prettier": "^2.3.0",
+    "sass": "^1.34.0",
+    "sass-loader": "^11.1.1"
   }
 }
