--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lintfix": "eslint --ext \".js,.vue\" --fix --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@braid/vue-formulate": "^2.5.2",
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/markdownit": "^2.0.0",
     "@nuxtjs/style-resources": "^1.0.0",
