workspace settings cleaned up

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/markdownit": "^2.0.0",
     "@nuxtjs/style-resources": "^1.0.0",
     "core-js": "^3.9.1",
+    "firacode": "^5.2.0",
     "nuxt": "^2.15.3",
     "sass-migrator": "^1.4.0"
   },
