--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "@nuxtjs/style-resources": "^1.0.0",
     "core-js": "^3.9.1",
     "firacode": "^5.2.0",
-    "nuxt": "^2.15.3",
-    "sass-migrator": "^1.4.0"
+    "nuxt": "^2.15.3"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/stylelint-module": "^4.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.1.0",
@@ -34,9 +34,9 @@
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-vue": "^7.9.0",
     "fibers": "^5.0.0",
-    "nuxt-animejs": "^1.2.1",
     "prettier": "^2.2.1",
     "sass": "^1.32.8",
-    "sass-loader": "^10.1.1"
+    "sass-loader": "^10.1.1",
+    "stylelint": "^13.13.1"
   }
 }
