--- a/package.json
+++ b/package.json
@@ -16,23 +16,17 @@
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/markdownit": "^2.0.0",
     "@nuxtjs/style-resources": "^1.0.0",
-    "buefy": "^0.9.7",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3",
-    "nuxt-buefy": "^0.4.7"
+    "nuxt": "^2.15.5"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/html-validator": "^0.4.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-vue": "^7.9.0",
     "fibers": "^5.0.0",
     "nuxt-animejs": "^1.2.1",
