development-main: finishing components

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "sass": "1.32.13",
     "sass-loader": "^10.1.1",
     "stylelint-config-idiomatic-order": "^8.1.0",
+    "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-sass-guidelines": "^8.0.0",
     "stylelint-config-standard": "^22.0.0"
   }
