--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^7.9.0",
     "fibers": "^5.0.0",
+    "nuxt-build-optimisations": "^1.0.3",
     "prettier": "^2.3.0",
     "sass": "1.32.13",
     "sass-loader": "^10.1.1",
